tests/purs/failing/DerivingClauseMultiParamNoArgs.out
Error found:
at tests/purs/failing/DerivingClauseMultiParamNoArgs.purs:7:1 - 8:24 (line 7, column 1 - line 8, column 24)

  The type class [33mMain.MyMultiParam[0m has 2 type parameters and cannot be derived in a derive clause without explicit type arguments.
  Provide explicit type arguments in the derive clause, e.g.:

    [33mderive (Main.MyMultiParam TypeArg1 TypeArg2)[0m



See https://github.com/purescript/documentation/blob/master/errors/DeriveClauseArityError.md for more information,
or to contribute content related to this error.

